alignment fix

--- a/docs/stylesheet.css
+++ b/docs/stylesheet.css
@@ -56,16 +56,6 @@ a:hover {
     line-height: 1.6;
 }
 
-.center2 {
-    display: flex;
-    height: 70px;
-    flex-wrap: wrap;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-}
-
 .col2 {
     display: flex;
     flex-direction: column;
